--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -83,6 +83,7 @@
     display: flex;
     gap: 4px;
     align-items: center;
+    cursor: pointer;
 }
 
 .header .right-side .header-icon .counter {
